# bilinear

./: Cargo.toml  README.md  package.json  webpack.config.js
js/: app.js  index.js
js/lib/: bilinear.js
scripts/: create-package.js
src/: lib.rs  utils.rs
static/: index.html
static/styles/: main.css
