# You must change these to your own details.
[package]
authors = ["Leonel Vieyra <me@leonelv.com>"]
categories = ["wasm", "image processing", "image"]
description = "image resampler based on the bilinear interpolation algorithm"
edition = "2018"
name = "bilinear"
readme = "README.md"
version = "1.0.0"
repository="https://github.com/wasm-image/bilinear"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = {version = "0.4.2", optional = true}

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
features = ["console", "ImageData", "Window"]
version = "0.3.22"

# These crates are used for running unit tests.
[dev-dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.1.27"
image = "0.23.14"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
wasm-bindgen-test = "0.3.28"
